--- a/src/styles/utilities/_variables.scss
+++ b/src/styles/utilities/_variables.scss
@@ -1,6 +1,8 @@
 $REM: 18;
 $breakpoint: undefined;
 
+$w-tablet: 768px;
+
 $colors: (
   chinese-black: hsl(0, 0%, 8%),
   eucalyptus: hsl(153, 71%, 59%),
