--- a/src/styles/Project.module.scss
+++ b/src/styles/Project.module.scss
@@ -1,7 +1,28 @@
 @use "./utilities/global" as *;
 
-.image {
+.image_wrapper {
+  position: relative;
   margin-bottom: rem(20px);
+  font-size: 0;
+}
+
+.overlay {
+  display: none;
+  @media (min-width: $w-desktop) {
+    position: absolute;
+    inset: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: rem(48px);
+    background-color: hsla(0, 0%, 0%, 0.75);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    &:hover {
+      opacity: 1;
+    }
+  }
 }
 
 .title {
