--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -34,3 +34,14 @@ body {
   width: 100%;
   height: 100%;
 }
+
+a {
+  &:any-link {
+    color: color(white);
+    text-decoration: none;
+    transition: color 0.2s ease;
+  }
+  &:hover {
+    color: color(eucalyptus);
+  }
+}
