--- a/src/styles/utilities/_functions.scss
+++ b/src/styles/utilities/_functions.scss
@@ -113,6 +113,8 @@ $unit-table: (
     );
   } @else if unit($line-height) == "px" {
     line-height: math.div($line-height, convertUnit($font-size, px));
+  } @else if unit($line-height) == "em" or unit($line-height) == "rem" {
+    line-height: $line-height;
   } @else {
     @error "Invalid unit!";
   }
