--- a/src/components/Icons/IconLI.module.scss
+++ b/src/components/Icons/IconLI.module.scss
@@ -3,7 +3,7 @@
 .container {
   width: rem(19.2px);
   height: rem(19.2px);
-  @media (min-width: $w-tablet) {
+  @media (min-width: $bp1) {
     width: rem(24px);
     height: rem(24px);
   }
