--- a/src/components/Icons/IconTwitter.module.scss
+++ b/src/components/Icons/IconTwitter.module.scss
@@ -3,7 +3,7 @@
 .container {
   width: rem(18.62px);
   height: rem(15.14px);
-  @media (min-width: $w-tablet) {
+  @media (min-width: $bp1) {
     width: rem(23.28px);
     height: rem(18.93px);
   }
