--- a/src/styles/utilities/_variables.scss
+++ b/src/styles/utilities/_variables.scss
@@ -5,6 +5,7 @@ $w-mobile: 375px;
 $w-tablet: 768px;
 $w-desktop: 1440px;
 $bp1: 650px;
+$bp2: 1200px;
 
 $colors: (
   chinese-black: hsl(0, 0%, 8%),
